// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maxSize 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 2,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "headerBackgroundColor": "#f6f7f9",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
      },
      "stackCornerRadius": [
        4,
        4,
        0,
        0,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "headerBackgroundColor": "#f6f7f9",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        },
        "stackCornerRadius": [
          4,
          4,
          0,
          0,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "east-A-profit-profit",
      "__Dim_Color__": "east-A-profit",
      "__Dim_Detail__": "east-A-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "profit": 1,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-A-sales-sales",
      "__Dim_Color__": "east-A-sales",
      "__Dim_Detail__": "east-A-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "region": "east",
      "sales": 2,
    },
    {
      "__Dim_ColorId__": "east-A-discount-discount",
      "__Dim_Color__": "east-A-discount",
      "__Dim_Detail__": "east-A-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-profit-profit",
      "__Dim_Color__": "east-B-profit",
      "__Dim_Detail__": "east-B-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "profit": 3,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-sales-sales",
      "__Dim_Color__": "east-B-sales",
      "__Dim_Detail__": "east-B-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "region": "east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "east-B-discount-discount",
      "__Dim_Color__": "east-B-discount",
      "__Dim_Detail__": "east-B-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-C-profit-profit",
      "__Dim_Color__": "east-C-profit",
      "__Dim_Detail__": "east-C-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "profit": 3,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-C-sales-sales",
      "__Dim_Color__": "east-C-sales",
      "__Dim_Detail__": "east-C-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "region": "east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "east-C-discount-discount",
      "__Dim_Color__": "east-C-discount",
      "__Dim_Detail__": "east-C-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-D-profit-profit",
      "__Dim_Color__": "east-D-profit",
      "__Dim_Detail__": "east-D-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "profit": 5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-D-sales-sales",
      "__Dim_Color__": "east-D-sales",
      "__Dim_Detail__": "east-D-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "region": "east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "east-D-discount-discount",
      "__Dim_Color__": "east-D-discount",
      "__Dim_Detail__": "east-D-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-E-profit-profit",
      "__Dim_Color__": "east-E-profit",
      "__Dim_Detail__": "east-E-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "profit": 4,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-E-sales-sales",
      "__Dim_Color__": "east-E-sales",
      "__Dim_Detail__": "east-E-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 8,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "region": "east",
      "sales": 8,
    },
    {
      "__Dim_ColorId__": "east-E-discount-discount",
      "__Dim_Color__": "east-E-discount",
      "__Dim_Detail__": "east-E-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "north of east-A-profit-profit",
      "__Dim_Color__": "north of east-A-profit",
      "__Dim_Detail__": "north of east-A-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "profit": 1,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-A-sales-sales",
      "__Dim_Color__": "north of east-A-sales",
      "__Dim_Detail__": "north of east-A-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "region": "north of east",
      "sales": 2,
    },
    {
      "__Dim_ColorId__": "north of east-A-discount-discount",
      "__Dim_Color__": "north of east-A-discount",
      "__Dim_Detail__": "north of east-A-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-B-profit-profit",
      "__Dim_Color__": "north of east-B-profit",
      "__Dim_Detail__": "north of east-B-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "profit": 3,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-B-sales-sales",
      "__Dim_Color__": "north of east-B-sales",
      "__Dim_Detail__": "north of east-B-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "region": "north of east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "north of east-B-discount-discount",
      "__Dim_Color__": "north of east-B-discount",
      "__Dim_Detail__": "north of east-B-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-C-profit-profit",
      "__Dim_Color__": "north of east-C-profit",
      "__Dim_Detail__": "north of east-C-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "profit": 3,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-C-sales-sales",
      "__Dim_Color__": "north of east-C-sales",
      "__Dim_Detail__": "north of east-C-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "region": "north of east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "north of east-C-discount-discount",
      "__Dim_Color__": "north of east-C-discount",
      "__Dim_Detail__": "north of east-C-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-D-profit-profit",
      "__Dim_Color__": "north of east-D-profit",
      "__Dim_Detail__": "north of east-D-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "profit": 5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-D-sales-sales",
      "__Dim_Color__": "north of east-D-sales",
      "__Dim_Detail__": "north of east-D-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "region": "north of east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "north of east-D-discount-discount",
      "__Dim_Color__": "north of east-D-discount",
      "__Dim_Detail__": "north of east-D-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-E-profit-profit",
      "__Dim_Color__": "north of east-E-profit",
      "__Dim_Detail__": "north of east-E-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "profit": 4,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-E-sales-sales",
      "__Dim_Color__": "north of east-E-sales",
      "__Dim_Detail__": "north of east-E-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 8,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "region": "north of east",
      "sales": 8,
    },
    {
      "__Dim_ColorId__": "north of east-E-discount-discount",
      "__Dim_Color__": "north of east-E-discount",
      "__Dim_Detail__": "north of east-E-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "discount": "discount",
          "profit": "profit",
          "sales": "sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 30,
          "max": 10,
          "min": 0.5,
          "sum": 101,
        },
      },
      "id": "columnParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "east-A-discount-discount": "east-A-discount",
          "east-A-profit-profit": "east-A-profit",
          "east-A-sales-sales": "east-A-sales",
          "east-B-discount-discount": "east-B-discount",
          "east-B-profit-profit": "east-B-profit",
          "east-B-sales-sales": "east-B-sales",
          "east-C-discount-discount": "east-C-discount",
          "east-C-profit-profit": "east-C-profit",
          "east-C-sales-sales": "east-C-sales",
          "east-D-discount-discount": "east-D-discount",
          "east-D-profit-profit": "east-D-profit",
          "east-D-sales-sales": "east-D-sales",
          "east-E-discount-discount": "east-E-discount",
          "east-E-profit-profit": "east-E-profit",
          "east-E-sales-sales": "east-E-sales",
          "north of east-A-discount-discount": "north of east-A-discount",
          "north of east-A-profit-profit": "north of east-A-profit",
          "north of east-A-sales-sales": "north of east-A-sales",
          "north of east-B-discount-discount": "north of east-B-discount",
          "north of east-B-profit-profit": "north of east-B-profit",
          "north of east-B-sales-sales": "north of east-B-sales",
          "north of east-C-discount-discount": "north of east-C-discount",
          "north of east-C-profit-profit": "north of east-C-profit",
          "north of east-C-sales-sales": "north of east-C-sales",
          "north of east-D-discount-discount": "north of east-D-discount",
          "north of east-D-profit-profit": "north of east-D-profit",
          "north of east-D-sales-sales": "north of east-D-sales",
          "north of east-E-discount-discount": "north of east-E-discount",
          "north of east-E-profit-profit": "north of east-E-profit",
          "north of east-E-sales-sales": "north of east-E-sales",
        },
        "colorItems": [
          "east-A-profit-profit",
          "east-A-sales-sales",
          "east-A-discount-discount",
          "east-B-profit-profit",
          "east-B-sales-sales",
          "east-B-discount-discount",
          "east-C-profit-profit",
          "east-C-sales-sales",
          "east-C-discount-discount",
          "east-D-profit-profit",
          "east-D-sales-sales",
          "east-D-discount-discount",
          "east-E-profit-profit",
          "east-E-sales-sales",
          "east-E-discount-discount",
          "north of east-A-profit-profit",
          "north of east-A-sales-sales",
          "north of east-A-discount-discount",
          "north of east-B-profit-profit",
          "north of east-B-sales-sales",
          "north of east-B-discount-discount",
          "north of east-C-profit-profit",
          "north of east-C-sales-sales",
          "north of east-C-discount-discount",
          "north of east-D-profit-profit",
          "north of east-D-sales-sales",
          "north of east-D-discount-discount",
          "north of east-E-profit-profit",
          "north of east-E-sales-sales",
          "north of east-E-discount-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "region",
      "id": "region",
    },
    {
      "alias": "city",
      "id": "city",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "region",
      "city",
      "__MeaName__",
    ],
    "column": [],
    "detail": [
      "region",
      "city",
      "__MeaName__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
      "region",
      "city",
    ],
    "x": [
      "date",
    ],
    "y": [
      "profit",
      "sales",
      "discount",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "discount",
      "id": "discount",
    },
  ],
}
`;

exports[`maxSize 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "date",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "profit & sales & discount",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "east-A-profit-profit",
      "east-A-sales-sales",
      "east-A-discount-discount",
      "east-B-profit-profit",
      "east-B-sales-sales",
      "east-B-discount-discount",
      "east-C-profit-profit",
      "east-C-sales-sales",
      "east-C-discount-discount",
      "east-D-profit-profit",
      "east-D-sales-sales",
      "east-D-discount-discount",
      "east-E-profit-profit",
      "east-E-sales-sales",
      "east-E-discount-discount",
      "north of east-A-profit-profit",
      "north of east-A-sales-sales",
      "north of east-A-discount-discount",
      "north of east-B-profit-profit",
      "north of east-B-sales-sales",
      "north of east-B-discount-discount",
      "north of east-C-profit-profit",
      "north of east-C-sales-sales",
      "north of east-C-discount-discount",
      "north of east-D-profit-profit",
      "north of east-D-sales-sales",
      "north of east-D-discount-discount",
      "north of east-E-profit-profit",
      "north of east-E-sales-sales",
      "north of east-E-discount-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "columnParallel",
    "values": [
      {
        "__Dim_ColorId__": "east-A-profit-profit",
        "__Dim_Color__": "east-A-profit",
        "__Dim_Detail__": "east-A-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "profit": 1,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-A-sales-sales",
        "__Dim_Color__": "east-A-sales",
        "__Dim_Detail__": "east-A-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "region": "east",
        "sales": 2,
      },
      {
        "__Dim_ColorId__": "east-A-discount-discount",
        "__Dim_Color__": "east-A-discount",
        "__Dim_Detail__": "east-A-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-profit-profit",
        "__Dim_Color__": "east-B-profit",
        "__Dim_Detail__": "east-B-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "profit": 3,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-sales-sales",
        "__Dim_Color__": "east-B-sales",
        "__Dim_Detail__": "east-B-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "region": "east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "east-B-discount-discount",
        "__Dim_Color__": "east-B-discount",
        "__Dim_Detail__": "east-B-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-C-profit-profit",
        "__Dim_Color__": "east-C-profit",
        "__Dim_Detail__": "east-C-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "profit": 3,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-C-sales-sales",
        "__Dim_Color__": "east-C-sales",
        "__Dim_Detail__": "east-C-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "region": "east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "east-C-discount-discount",
        "__Dim_Color__": "east-C-discount",
        "__Dim_Detail__": "east-C-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-D-profit-profit",
        "__Dim_Color__": "east-D-profit",
        "__Dim_Detail__": "east-D-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "profit": 5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-D-sales-sales",
        "__Dim_Color__": "east-D-sales",
        "__Dim_Detail__": "east-D-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "region": "east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "east-D-discount-discount",
        "__Dim_Color__": "east-D-discount",
        "__Dim_Detail__": "east-D-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-E-profit-profit",
        "__Dim_Color__": "east-E-profit",
        "__Dim_Detail__": "east-E-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "profit": 4,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-E-sales-sales",
        "__Dim_Color__": "east-E-sales",
        "__Dim_Detail__": "east-E-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 8,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "region": "east",
        "sales": 8,
      },
      {
        "__Dim_ColorId__": "east-E-discount-discount",
        "__Dim_Color__": "east-E-discount",
        "__Dim_Detail__": "east-E-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "north of east-A-profit-profit",
        "__Dim_Color__": "north of east-A-profit",
        "__Dim_Detail__": "north of east-A-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "profit": 1,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-A-sales-sales",
        "__Dim_Color__": "north of east-A-sales",
        "__Dim_Detail__": "north of east-A-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "region": "north of east",
        "sales": 2,
      },
      {
        "__Dim_ColorId__": "north of east-A-discount-discount",
        "__Dim_Color__": "north of east-A-discount",
        "__Dim_Detail__": "north of east-A-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-B-profit-profit",
        "__Dim_Color__": "north of east-B-profit",
        "__Dim_Detail__": "north of east-B-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "profit": 3,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-B-sales-sales",
        "__Dim_Color__": "north of east-B-sales",
        "__Dim_Detail__": "north of east-B-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "region": "north of east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "north of east-B-discount-discount",
        "__Dim_Color__": "north of east-B-discount",
        "__Dim_Detail__": "north of east-B-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-C-profit-profit",
        "__Dim_Color__": "north of east-C-profit",
        "__Dim_Detail__": "north of east-C-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "profit": 3,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-C-sales-sales",
        "__Dim_Color__": "north of east-C-sales",
        "__Dim_Detail__": "north of east-C-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "region": "north of east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "north of east-C-discount-discount",
        "__Dim_Color__": "north of east-C-discount",
        "__Dim_Detail__": "north of east-C-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-D-profit-profit",
        "__Dim_Color__": "north of east-D-profit",
        "__Dim_Detail__": "north of east-D-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "profit": 5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-D-sales-sales",
        "__Dim_Color__": "north of east-D-sales",
        "__Dim_Detail__": "north of east-D-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "region": "north of east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "north of east-D-discount-discount",
        "__Dim_Color__": "north of east-D-discount",
        "__Dim_Detail__": "north of east-D-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-E-profit-profit",
        "__Dim_Color__": "north of east-E-profit",
        "__Dim_Detail__": "north of east-E-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "profit": 4,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-E-sales-sales",
        "__Dim_Color__": "north of east-E-sales",
        "__Dim_Detail__": "north of east-E-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 8,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "region": "north of east",
        "sales": 8,
      },
      {
        "__Dim_ColorId__": "north of east-E-discount-discount",
        "__Dim_Color__": "north of east-E-discount",
        "__Dim_Detail__": "north of east-E-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
    },
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 2,
    "maxRow": 2,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "__Dim_X__",
    "__Dim_Detail__",
  ],
  "yField": "__MeaValue__",
}
`;

exports[`maxSize 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "east-A-discount-discount": "east-A-discount",
    "east-A-profit-profit": "east-A-profit",
    "east-A-sales-sales": "east-A-sales",
    "east-B-discount-discount": "east-B-discount",
    "east-B-profit-profit": "east-B-profit",
    "east-B-sales-sales": "east-B-sales",
    "east-C-discount-discount": "east-C-discount",
    "east-C-profit-profit": "east-C-profit",
    "east-C-sales-sales": "east-C-sales",
    "east-D-discount-discount": "east-D-discount",
    "east-D-profit-profit": "east-D-profit",
    "east-D-sales-sales": "east-D-sales",
    "east-E-discount-discount": "east-E-discount",
    "east-E-profit-profit": "east-E-profit",
    "east-E-sales-sales": "east-E-sales",
    "north of east-A-discount-discount": "north of east-A-discount",
    "north of east-A-profit-profit": "north of east-A-profit",
    "north of east-A-sales-sales": "north of east-A-sales",
    "north of east-B-discount-discount": "north of east-B-discount",
    "north of east-B-profit-profit": "north of east-B-profit",
    "north of east-B-sales-sales": "north of east-B-sales",
    "north of east-C-discount-discount": "north of east-C-discount",
    "north of east-C-profit-profit": "north of east-C-profit",
    "north of east-C-sales-sales": "north of east-C-sales",
    "north of east-D-discount-discount": "north of east-D-discount",
    "north of east-D-profit-profit": "north of east-D-profit",
    "north of east-D-sales-sales": "north of east-D-sales",
    "north of east-E-discount-discount": "north of east-E-discount",
    "north of east-E-profit-profit": "north of east-E-profit",
    "north of east-E-sales-sales": "north of east-E-sales",
  },
  "colorItems": [
    {
      "alias": "east-A-profit",
      "id": "east-A-profit-profit",
    },
    {
      "alias": "east-A-sales",
      "id": "east-A-sales-sales",
    },
    {
      "alias": "east-A-discount",
      "id": "east-A-discount-discount",
    },
    {
      "alias": "east-B-profit",
      "id": "east-B-profit-profit",
    },
    {
      "alias": "east-B-sales",
      "id": "east-B-sales-sales",
    },
    {
      "alias": "east-B-discount",
      "id": "east-B-discount-discount",
    },
    {
      "alias": "east-C-profit",
      "id": "east-C-profit-profit",
    },
    {
      "alias": "east-C-sales",
      "id": "east-C-sales-sales",
    },
    {
      "alias": "east-C-discount",
      "id": "east-C-discount-discount",
    },
    {
      "alias": "east-D-profit",
      "id": "east-D-profit-profit",
    },
    {
      "alias": "east-D-sales",
      "id": "east-D-sales-sales",
    },
    {
      "alias": "east-D-discount",
      "id": "east-D-discount-discount",
    },
    {
      "alias": "east-E-profit",
      "id": "east-E-profit-profit",
    },
    {
      "alias": "east-E-sales",
      "id": "east-E-sales-sales",
    },
    {
      "alias": "east-E-discount",
      "id": "east-E-discount-discount",
    },
    {
      "alias": "north of east-A-profit",
      "id": "north of east-A-profit-profit",
    },
    {
      "alias": "north of east-A-sales",
      "id": "north of east-A-sales-sales",
    },
    {
      "alias": "north of east-A-discount",
      "id": "north of east-A-discount-discount",
    },
    {
      "alias": "north of east-B-profit",
      "id": "north of east-B-profit-profit",
    },
    {
      "alias": "north of east-B-sales",
      "id": "north of east-B-sales-sales",
    },
    {
      "alias": "north of east-B-discount",
      "id": "north of east-B-discount-discount",
    },
    {
      "alias": "north of east-C-profit",
      "id": "north of east-C-profit-profit",
    },
    {
      "alias": "north of east-C-sales",
      "id": "north of east-C-sales-sales",
    },
    {
      "alias": "north of east-C-discount",
      "id": "north of east-C-discount-discount",
    },
    {
      "alias": "north of east-D-profit",
      "id": "north of east-D-profit-profit",
    },
    {
      "alias": "north of east-D-sales",
      "id": "north of east-D-sales-sales",
    },
    {
      "alias": "north of east-D-discount",
      "id": "north of east-D-discount-discount",
    },
    {
      "alias": "north of east-E-profit",
      "id": "north of east-E-profit-profit",
    },
    {
      "alias": "north of east-E-sales",
      "id": "north of east-E-sales-sales",
    },
    {
      "alias": "north of east-E-discount",
      "id": "north of east-E-discount-discount",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
